--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "sam",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "express": "^4.16.4",
