--- a/docker-compose-v3.yml
+++ b/docker-compose-v3.yml
@@ -29,6 +29,18 @@ services:
      - ~/Docker/mongo:/data/db
     networks:
      - web
+
+  visualizer:
+    image: dockersamples/visualizer
+    ports:
+      - "8080:8080"
+    stop_grace_period: 1m30s
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    deploy:
+      placement:
+        constraints: [node.role == manager]
+
   
 networks:
   web:
